--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                 <h1>Muhammad Ousman Sohail</h1>
                 <p>I'm a <span class="typed"></span></p>
                 <div class="hero-buttons">
-                    <a href="assets/downloads/your_cv.pdf" target="_blank" class="btn-primary">Download CV</a>
+                    <a href="assets\downloads\Muhammad-Ousman.pdf" target="_blank" class="btn-primary">Download CV</a>
                     <a href="#contact" class="btn-outline">Hire Me</a>
                 </div>
             </div>
